caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/missing_dict_value_type.caffeine
Blueprints
  * "test":
    Requires { counts: Dict(String) }
    Provides { value: "x" }
